--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-simple-uploader-4ybolo",
   "version": "0.1.1",
   "description": "A Vue.js upload component powered by simple-uploader.js",
-  "main": "dist/vue-uploader.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/simple-uploader/vue-uploader.git"
